# localRentalPlace

./: .gitignore  Map_rent_places.py  README.md  better_version.py  create_geocode.py  index.html  index.html.html  kijiji_rental_list.html  kijiji_rental_map.html  kijiji_rentals.csv  main.py  pyproject.toml  requirements.txt  scraper.py  web_scraping_from_kijiji.py  web_turtle.py
archive/: better_version.py  get_kijiji_content.py  web_turtle.py
development/: kijiji_scraper_v2.py  modern_kijiji_scraper.py  modern_scraper_test.py  simple_kijiji_scraper.py  test_kijiji_structure.py  test_modern_scraper.py
development-records/: DEVELOPMENT_RECORD.md
